# MonitorHead

./: .gitignore  Advanced3DHead.qml  AxisPanel.qml  CMakeLists.txt  Formatters.js  GraphCanvas.qml  Main.qml  README.md  README.txt  README_ESP.md  Test.qml  headmodel.cpp  headmodel.h  log_reader.cpp  log_reader.h  main.cpp  tiltcontroller.cpp  tiltcontroller.h  wificontroller.cpp  wificontroller.h
info/: help.html
licenses/: THIRD-PARTY-LICENSES.txt
models/: Head_poligon.mesh  Head_poligon_new.mesh  Head_poligon_old.mesh  Inner_ear_left.mesh  Monkey_color_texture.fbx  Monkey_color_texture.qml  suzanne_mesh.mesh
models/meshes/: ______001_mesh.mesh  ______mesh.mesh  innner_ear_left.mesh  object_mesh.mesh  object_mesh11.mesh  object_mesh_10.mesh  object_mesh_2.mesh  object_mesh_3.mesh
project_revision/: Improvements_project_MonitorHead.md
research/: Research_000001_2025_11_04_23_32_52.txt  Research_000002_2025_11_05_13_01_17.txt  Research_000003_2025_11_05_13_25_05.txt  Research_000004_2025_11_05_13_25_07.txt  Research_000005_2025_11_05_21_16_57.txt  Research_000008_2025_11_09_17_52_24.txt  Research_000009_2025_11_09_18_01_45.txt  Research_000010_2025_11_12_11_31_50.txt  Research_000011_2025_11_12_19_14_13.txt
script_exe/: MonitorHead.iss  prepare_release.sh
